--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -106,9 +106,9 @@
         android:text="Sign Out" />
 
 
-</RelativeLayout>
 
-<!-- &lt;!&ndash;   <TextView-->
+
+<!--    <TextView-->
 <!--        android:id="@+id/tvInvnetory"-->
 <!--        android:layout_width="wrap_content"-->
 <!--        android:layout_height="wrap_content"-->
@@ -139,7 +139,6 @@
 <!--        android:text="TextView"-->
 <!--        app:layout_constraintEnd_toEndOf="parent"-->
 <!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/tvSales" />&ndash;&gt;-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/tvSales" />-->
 
-<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
-
+</RelativeLayout>
