--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,27 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/loginbg"
     tools:context=".LoginActivity">
 
+
     <View
         android:id="@+id/top_view"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:background="@drawable/bg_view" />
+        android:background="@drawable/bg_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-
-
-    <View
-        android:id="@+id/bottom_view"
-        android:layout_width="match_parent"
-        android:layout_height="801dp"
-        android:layout_below="@+id/top_view"
-
-        />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNav"
@@ -29,12 +24,12 @@
         android:layout_height="65dp"
         android:layout_row="1"
         android:layout_column="1"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="0dp"
         app:backgroundTint="#50CFFF"
-        app:menu="@menu/bottom_navbar" >
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:menu="@menu/bottom_navbar">
 
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
@@ -43,24 +38,20 @@
         android:id="@+id/imageView5"
         android:layout_width="141dp"
         android:layout_height="148dp"
-        android:layout_alignBottom="@+id/top_view"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
         android:layout_marginStart="276dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="-6dp"
         android:layout_marginBottom="36dp"
-        android:foreground="@mipmap/izaikoico_foreground" />
+        android:foreground="@mipmap/izaikoico_foreground"
+        app:layout_constraintBottom_toBottomOf="@+id/top_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="257dp"
         android:layout_height="80dp"
-        android:layout_alignBottom="@+id/top_view"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
         android:layout_marginStart="28dp"
         android:layout_marginTop="69dp"
         android:layout_marginEnd="124dp"
@@ -70,16 +61,16 @@
         android:textAlignment="center"
         android:textColor="#FFFDFD"
         android:textColorHint="#FFFCFC"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/top_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvWelcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/top_view"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
         android:layout_marginStart="35dp"
         android:layout_marginTop="23dp"
         android:layout_marginEnd="141dp"
@@ -87,26 +78,110 @@
         android:fontFamily="@font/latobold"
         android:text="Welcome Back!"
         android:textColor="#000000"
-        android:textSize="34sp" />
+        android:textSize="34sp"
+        app:layout_constraintBottom_toBottomOf="@+id/top_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <Button
         android:id="@+id/signOutButton"
         android:layout_width="132dp"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/top_view"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
         android:layout_marginStart="140dp"
         android:layout_marginTop="147dp"
         android:layout_marginEnd="138dp"
         android:layout_marginBottom="5dp"
         android:fontFamily="@font/latobold"
-        android:text="Sign Out" />
+        android:text="Sign Out"
+        app:layout_constraintBottom_toBottomOf="@+id/top_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/inv"
+        android:layout_width="393dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/itembg"
+        app:layout_constraintBottom_toTopOf="@+id/salez"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/top_view" />
+
+    <View
+        android:id="@+id/salez"
+        android:layout_width="393dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="324dp"
+        android:background="@drawable/itembg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/invest"
+        android:layout_width="393dp"
+        android:layout_height="100dp"
+        android:background="@drawable/itembg"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNav"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/salez"
+        app:layout_constraintVertical_bias="0.117" />
+
+    <TextView
+        android:id="@+id/tvSales"
+        android:layout_width="290dp"
+        android:layout_height="47dp"
+        android:fontFamily="@font/latobold"
+        android:text="TextView"
+        android:textAlignment="textStart"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/salez"
+        app:layout_constraintEnd_toEndOf="@+id/salez"
+        app:layout_constraintHorizontal_bias="0.524"
+        app:layout_constraintStart_toStartOf="@+id/salez"
+        app:layout_constraintTop_toTopOf="@+id/salez"
+        app:layout_constraintVertical_bias="0.622" />
+
+    <TextView
+        android:id="@+id/tvInvested"
+        android:layout_width="293dp"
+        android:layout_height="37dp"
+        android:fontFamily="@font/latobold"
+        android:text="TextView"
+        android:textAlignment="textStart"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/invest"
+        app:layout_constraintEnd_toEndOf="@+id/invest"
+        app:layout_constraintHorizontal_bias="0.53"
+        app:layout_constraintStart_toStartOf="@+id/invest"
+        app:layout_constraintTop_toTopOf="@+id/invest"
+        app:layout_constraintVertical_bias="0.539" />
+
+    <TextView
+        android:id="@+id/tvInvnetory"
+        android:layout_width="291dp"
+        android:layout_height="39dp"
+        android:fontFamily="@font/latobold"
+        android:text="TextView"
+        android:textAlignment="textStart"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/inv"
+        app:layout_constraintEnd_toEndOf="@+id/inv"
+        app:layout_constraintHorizontal_bias="0.53"
+        app:layout_constraintStart_toStartOf="@+id/inv"
+        app:layout_constraintTop_toTopOf="@+id/inv"
+        app:layout_constraintVertical_bias="0.555" />
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
 <!-- &lt;!&ndash;   <TextView-->
 <!--        android:id="@+id/tvInvnetory"-->
@@ -141,5 +216,4 @@
 <!--        app:layout_constraintStart_toStartOf="parent"-->
 <!--        app:layout_constraintTop_toBottomOf="@+id/tvSales" />&ndash;&gt;-->
 
-<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
 
