--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -133,7 +133,7 @@
         app:layout_constraintVertical_bias="0.117" />
 
     <TextView
-        android:id="@+id/tvSales"
+        android:id="@+id/tvCatOne"
         android:layout_width="290dp"
         android:layout_height="47dp"
         android:fontFamily="@font/latobold"
@@ -149,7 +149,7 @@
         app:layout_constraintVertical_bias="0.622" />
 
     <TextView
-        android:id="@+id/tvInvested"
+        android:id="@+id/tvCatTwo"
         android:layout_width="293dp"
         android:layout_height="37dp"
         android:fontFamily="@font/latobold"
@@ -165,7 +165,7 @@
         app:layout_constraintVertical_bias="0.539" />
 
     <TextView
-        android:id="@+id/tvInvnetory"
+        android:id="@+id/tvTotalRev"
         android:layout_width="291dp"
         android:layout_height="39dp"
         android:fontFamily="@font/latobold"
